// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Form Default renders correctly 1`] = `
<form
  class="ecl-search-form"
  role="search"
>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-search-form__label"
      for="search-input"
    >
      Search
    </label>
    <input
      class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
      id="search-input"
      placeholder="Placeholder text"
      type="search"
    />
  </div>
  <button
    aria-label="Search"
    class="ecl-button ecl-button--search ecl-search-form__button"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        Search
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--search"
        />
      </svg>
    </span>
  </button>
</form>
`;

exports[`Search Form Default renders correctly with extra attributes 1`] = `
<form
  class="ecl-search-form"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  role="search"
>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-search-form__label"
      for="search-input"
    >
      Search
    </label>
    <input
      class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
      id="search-input"
      placeholder="Placeholder text"
      type="search"
    />
  </div>
  <button
    aria-label="Search"
    class="ecl-button ecl-button--search ecl-search-form__button"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        Search
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--search"
        />
      </svg>
    </span>
  </button>
</form>
`;

exports[`Search Form Default renders correctly with extra class names 1`] = `
<form
  class="ecl-search-form custom-class custom-class--test"
  role="search"
>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-search-form__label"
      for="search-input"
    >
      Search
    </label>
    <input
      class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
      id="search-input"
      placeholder="Placeholder text"
      type="search"
    />
  </div>
  <button
    aria-label="Search"
    class="ecl-button ecl-button--search ecl-search-form__button"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        Search
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--search"
        />
      </svg>
    </span>
  </button>
</form>
`;

exports[`Search Form Default renders correctly with extra form elements 1`] = `
<form
  class="ecl-search-form"
  role="search"
>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-search-form__label"
      for="search-input"
    >
      Search
    </label>
    <input
      class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
      id="search-input"
      placeholder="Placeholder text"
      type="search"
    />
  </div>
  <button
    aria-label="Search"
    class="ecl-button ecl-button--search ecl-search-form__button"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        Search
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--search"
        />
      </svg>
    </span>
  </button>
  <input
    id="custId"
    name="custId"
    type="hidden"
    value="1"
  />
</form>
`;
